// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`order-view test case 1 room 1`] = `
<div id="room"
     class="room"
     style="font-size: 20px; position: relative; width: 100%; height: 100%;"
>
  <div id="1"
       style="position: absolute; left: 249.640625px; top: 26.53125px; width: 80.296875px; height: 72.39453125px; border: 1px solid transparent; transition: none; font-weight: 700; background: rgb(255, 249, 196); border-radius: 5px; box-shadow: 0px 2px 4px rgba(131, 146, 167, 0.2);"
       class="waves-effect waves-red"
  >
    <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none; text-align: center; position: relative; overflow: hidden; border-radius: 4px;">
      <div style="font-size: 10px; position: absolute; top: 2px;">
      </div>
      <div>
        <div>
          1
        </div>
      </div>
    </div>
  </div>
  <div id="5"
       style="position: absolute; left: 354.3984375px; top: 26.8125px; width: 78.5078125px; height: 69.9140625px; border: 1px solid transparent; transition: none; font-weight: 700; background: rgb(255, 249, 196); border-radius: 5px; box-shadow: 0px 2px 4px rgba(131, 146, 167, 0.2);"
       class="waves-effect waves-red"
  >
    <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none; text-align: center; position: relative; overflow: hidden; border-radius: 4px;">
      <div style="font-size: 10px; position: absolute; top: 2px;">
      </div>
      <div>
        <div>
          5
        </div>
      </div>
    </div>
  </div>
  <div id="6"
       style="position: absolute; left: 464.87890625px; top: 27.5546875px; width: 78.5078125px; height: 69.9140625px; border: 1px solid transparent; transition: none; font-weight: 700; background: rgb(255, 249, 196); border-radius: 5px; box-shadow: 0px 2px 4px rgba(131, 146, 167, 0.2);"
       class="waves-effect waves-red"
  >
    <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none; text-align: center; position: relative; overflow: hidden; border-radius: 4px;">
      <div style="font-size: 10px; position: absolute; top: 2px;">
      </div>
      <div>
        <div>
          6
        </div>
      </div>
    </div>
  </div>
  <div id="7"
       style="position: absolute; left: 573.046875px; top: 26.1640625px; width: 78.5078125px; height: 69.9140625px; border: 1px solid transparent; transition: none; font-weight: 700; background: rgb(255, 249, 196); border-radius: 5px; box-shadow: 0px 2px 4px rgba(131, 146, 167, 0.2);"
       class="waves-effect waves-red"
  >
    <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none; text-align: center; position: relative; overflow: hidden; border-radius: 4px;">
      <div style="font-size: 10px; position: absolute; top: 2px;">
      </div>
      <div>
        <div>
          7
        </div>
      </div>
    </div>
  </div>
  <div id="8"
       style="position: absolute; left: 679.296875px; top: 29.40234375px; width: 78.12890625px; height: 68.10546875px; border: 1px solid transparent; transition: none; font-weight: 700; background: rgb(255, 249, 196); border-radius: 5px; box-shadow: 0px 2px 4px rgba(131, 146, 167, 0.2);"
       class="waves-effect waves-red"
  >
    <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none; text-align: center; position: relative; overflow: hidden; border-radius: 4px;">
      <div style="font-size: 10px; position: absolute; top: 2px;">
      </div>
      <div>
        <div>
          8
        </div>
      </div>
    </div>
  </div>
  <div id="14"
       style="position: absolute; left: 577.04296875px; top: 504.8515625px; width: 80.296875px; height: 72.39453125px; border: 1px solid transparent; transition: none; font-weight: 700; background: rgb(255, 249, 196); border-radius: 5px; box-shadow: 0px 2px 4px rgba(131, 146, 167, 0.2);"
       class="waves-effect waves-red"
  >
    <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none; text-align: center; position: relative; overflow: hidden; border-radius: 4px;">
      <div style="font-size: 10px; position: absolute; top: 2px;">
      </div>
      <div>
        <div>
          14
        </div>
      </div>
    </div>
  </div>
  <div id="15"
       style="position: absolute; left: 678.82421875px; top: 500.2890625px; width: 80.296875px; height: 72.39453125px; border: 1px solid transparent; transition: none; font-weight: 700; background: rgb(255, 249, 196); border-radius: 5px; box-shadow: 0px 2px 4px rgba(131, 146, 167, 0.2);"
       class="waves-effect waves-red"
  >
    <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none; text-align: center; position: relative; overflow: hidden; border-radius: 4px;">
      <div style="font-size: 10px; position: absolute; top: 2px;">
      </div>
      <div>
        <div>
          15
        </div>
      </div>
    </div>
  </div>
  <div id="25"
       style="position: absolute; left: 678.2890625px; top: 113.8671875px; width: 80.296875px; height: 72.39453125px; border: 1px solid transparent; transition: none; font-weight: 700; background: rgb(255, 249, 196); border-radius: 5px; box-shadow: 0px 2px 4px rgba(131, 146, 167, 0.2);"
       class="waves-effect waves-red"
  >
    <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none; text-align: center; position: relative; overflow: hidden; border-radius: 4px;">
      <div style="font-size: 10px; position: absolute; top: 2px;">
      </div>
      <div>
        <div>
          25
        </div>
      </div>
    </div>
  </div>
  <div id="Bar"
       style="position: absolute; left: 679.796875px; top: 201.6015625px; width: 79.7109375px; height: 210.75390625px; border: 1px solid transparent; transition: none; font-weight: 700; background: rgb(255, 249, 196); border-radius: 5px; box-shadow: 0px 2px 4px rgba(131, 146, 167, 0.2);"
       class="waves-effect waves-red"
  >
    <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none; text-align: center; position: relative; overflow: hidden; border-radius: 4px;">
      <div style="font-size: 10px; position: absolute; top: 2px;">
      </div>
      <div>
        <div>
          Bar
        </div>
      </div>
    </div>
  </div>
  <div id="26"
       style="position: absolute; left: 472.53515625px; top: 415.0625px; width: 80.296875px; height: 72.39453125px; border: 1px solid transparent; transition: none; font-weight: 700; background: rgb(255, 249, 196); border-radius: 5px; box-shadow: 0px 2px 4px rgba(131, 146, 167, 0.2);"
       class="waves-effect waves-red"
  >
    <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none; text-align: center; position: relative; overflow: hidden; border-radius: 4px;">
      <div style="font-size: 10px; position: absolute; top: 2px;">
      </div>
      <div>
        <div>
          26
        </div>
      </div>
    </div>
  </div>
  <div id="27"
       style="position: absolute; left: 578.46875px; top: 411.203125px; width: 80.296875px; height: 72.39453125px; border: 1px solid transparent; transition: none; font-weight: 700; background: rgb(255, 249, 196); border-radius: 5px; box-shadow: 0px 2px 4px rgba(131, 146, 167, 0.2);"
       class="waves-effect waves-red"
  >
    <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none; text-align: center; position: relative; overflow: hidden; border-radius: 4px;">
      <div style="font-size: 10px; position: absolute; top: 2px;">
      </div>
      <div>
        <div>
          27
        </div>
      </div>
    </div>
  </div>
  <div id="28"
       style="position: absolute; left: 366.01953125px; top: 504.69140625px; width: 80.296875px; height: 72.39453125px; border: 1px solid transparent; transition: none; font-weight: 700; background: rgb(255, 249, 196); border-radius: 5px; box-shadow: 0px 2px 4px rgba(131, 146, 167, 0.2);"
       class="waves-effect waves-red"
  >
    <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none; text-align: center; position: relative; overflow: hidden; border-radius: 4px;">
      <div style="font-size: 10px; position: absolute; top: 2px;">
      </div>
      <div>
        <div>
          28
        </div>
      </div>
    </div>
  </div>
  <div id="29"
       style="position: absolute; left: 473.05859375px; top: 505.61328125px; width: 80.296875px; height: 72.39453125px; border: 1px solid transparent; transition: none; font-weight: 700; background: rgb(255, 249, 196); border-radius: 5px; box-shadow: 0px 2px 4px rgba(131, 146, 167, 0.2);"
       class="waves-effect waves-red"
  >
    <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none; text-align: center; position: relative; overflow: hidden; border-radius: 4px;">
      <div style="font-size: 10px; position: absolute; top: 2px;">
      </div>
      <div>
        <div>
          29
        </div>
      </div>
    </div>
  </div>
  <div id="30"
       style="position: absolute; left: 7.08984375px; top: 330.05859375px; width: 80.296875px; height: 72.39453125px; border: 1px solid transparent; transition: none; font-weight: 700; background: rgb(255, 249, 196); border-radius: 5px; box-shadow: 0px 2px 4px rgba(131, 146, 167, 0.2);"
       class="waves-effect waves-red"
  >
    <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none; text-align: center; position: relative; overflow: hidden; border-radius: 4px;">
      <div style="font-size: 10px; position: absolute; top: 2px;">
      </div>
      <div>
        <div>
          30
        </div>
      </div>
    </div>
  </div>
  <div id="31"
       style="position: absolute; left: 4.92578125px; top: 152.61328125px; width: 80.296875px; height: 72.39453125px; border: 1px solid transparent; transition: none; font-weight: 700; background: rgb(255, 249, 196); border-radius: 5px; box-shadow: 0px 2px 4px rgba(131, 146, 167, 0.2);"
       class="waves-effect waves-red"
  >
    <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none; text-align: center; position: relative; overflow: hidden; border-radius: 4px;">
      <div style="font-size: 10px; position: absolute; top: 2px;">
      </div>
      <div>
        <div>
          31
        </div>
      </div>
    </div>
  </div>
  <div id="32"
       style="position: absolute; left: 7.3046875px; top: 239.09375px; width: 80.296875px; height: 72.39453125px; border: 1px solid transparent; transition: none; font-weight: 700; background: rgb(255, 249, 196); border-radius: 5px; box-shadow: 0px 2px 4px rgba(131, 146, 167, 0.2);"
       class="waves-effect waves-red"
  >
    <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none; text-align: center; position: relative; overflow: hidden; border-radius: 4px;">
      <div style="font-size: 10px; position: absolute; top: 2px;">
      </div>
      <div>
        <div>
          32
        </div>
      </div>
    </div>
  </div>
  <div id="34"
       style="position: absolute; left: 200.8515625px; top: 238.875px; width: 80.296875px; height: 72.39453125px; border: 1px solid transparent; transition: none; font-weight: 700; background: rgb(255, 249, 196); border-radius: 5px; box-shadow: 0px 2px 4px rgba(131, 146, 167, 0.2);"
       class="waves-effect waves-red"
  >
    <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none; text-align: center; position: relative; overflow: hidden; border-radius: 4px;">
      <div style="font-size: 10px; position: absolute; top: 2px;">
      </div>
      <div>
        <div>
          34
        </div>
      </div>
    </div>
  </div>
  <div id="35"
       style="position: absolute; left: 101.74609375px; top: 240.140625px; width: 80.296875px; height: 72.39453125px; border: 1px solid transparent; transition: none; font-weight: 700; background: rgb(255, 249, 196); border-radius: 5px; box-shadow: 0px 2px 4px rgba(131, 146, 167, 0.2);"
       class="waves-effect waves-red"
  >
    <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none; text-align: center; position: relative; overflow: hidden; border-radius: 4px;">
      <div style="font-size: 10px; position: absolute; top: 2px;">
      </div>
      <div>
        <div>
          35
        </div>
      </div>
    </div>
  </div>
  <div style="position: absolute; left: 14px; top: 414.984375px; width: 253.67578125px; height: 17.6796875px; border: 1px solid transparent; transition: none; font-weight: 700; background: rgb(134, 89, 45);"
       class
  >
    <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none; text-align: center; position: relative; overflow: hidden;">
    </div>
  </div>
</div>
`;

exports[`order-view test case 2 editable-room 1`] = `
<div id="room"
     class="room"
     style="font-size: 20px; position: relative; width: 100%; height: 100%;"
>
  <div id="1"
       style="position: absolute; left: 249.640625px; top: 26.53125px; width: 80.296875px; height: 72.39453125px; border: 1px solid transparent; transition: none; font-weight: 700; background: rgb(255, 249, 196); border-radius: 5px; box-shadow: 0px 2px 4px rgba(131, 146, 167, 0.2);"
  >
    <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none; text-align: center; position: relative; overflow: hidden; border-radius: 4px;">
      1
    </div>
  </div>
  <div id="5"
       style="position: absolute; left: 354.3984375px; top: 26.8125px; width: 78.5078125px; height: 69.9140625px; border: 1px solid transparent; transition: none; font-weight: 700; background: rgb(255, 249, 196); border-radius: 5px; box-shadow: 0px 2px 4px rgba(131, 146, 167, 0.2);"
  >
    <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none; text-align: center; position: relative; overflow: hidden; border-radius: 4px;">
      5
    </div>
  </div>
  <div id="6"
       style="position: absolute; left: 464.87890625px; top: 27.5546875px; width: 78.5078125px; height: 69.9140625px; border: 1px solid transparent; transition: none; font-weight: 700; background: rgb(255, 249, 196); border-radius: 5px; box-shadow: 0px 2px 4px rgba(131, 146, 167, 0.2);"
  >
    <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none; text-align: center; position: relative; overflow: hidden; border-radius: 4px;">
      6
    </div>
  </div>
  <div id="7"
       style="position: absolute; left: 573.046875px; top: 26.1640625px; width: 78.5078125px; height: 69.9140625px; border: 1px solid transparent; transition: none; font-weight: 700; background: rgb(255, 249, 196); border-radius: 5px; box-shadow: 0px 2px 4px rgba(131, 146, 167, 0.2);"
  >
    <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none; text-align: center; position: relative; overflow: hidden; border-radius: 4px;">
      7
    </div>
  </div>
  <div id="8"
       style="position: absolute; left: 679.296875px; top: 29.40234375px; width: 78.12890625px; height: 68.10546875px; border: 1px solid transparent; transition: none; font-weight: 700; background: rgb(255, 249, 196); border-radius: 5px; box-shadow: 0px 2px 4px rgba(131, 146, 167, 0.2);"
  >
    <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none; text-align: center; position: relative; overflow: hidden; border-radius: 4px;">
      8
    </div>
  </div>
  <div id="14"
       style="position: absolute; left: 577.04296875px; top: 504.8515625px; width: 80.296875px; height: 72.39453125px; border: 1px solid transparent; transition: none; font-weight: 700; background: rgb(255, 249, 196); border-radius: 5px; box-shadow: 0px 2px 4px rgba(131, 146, 167, 0.2);"
  >
    <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none; text-align: center; position: relative; overflow: hidden; border-radius: 4px;">
      14
    </div>
  </div>
  <div id="15"
       style="position: absolute; left: 678.82421875px; top: 500.2890625px; width: 80.296875px; height: 72.39453125px; border: 1px solid transparent; transition: none; font-weight: 700; background: rgb(255, 249, 196); border-radius: 5px; box-shadow: 0px 2px 4px rgba(131, 146, 167, 0.2);"
  >
    <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none; text-align: center; position: relative; overflow: hidden; border-radius: 4px;">
      15
    </div>
  </div>
  <div id="25"
       style="position: absolute; left: 678.2890625px; top: 113.8671875px; width: 80.296875px; height: 72.39453125px; border: 1px solid transparent; transition: none; font-weight: 700; background: rgb(255, 249, 196); border-radius: 5px; box-shadow: 0px 2px 4px rgba(131, 146, 167, 0.2);"
  >
    <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none; text-align: center; position: relative; overflow: hidden; border-radius: 4px;">
      25
    </div>
  </div>
  <div id="Bar"
       style="position: absolute; left: 679.796875px; top: 201.6015625px; width: 79.7109375px; height: 210.75390625px; border: 1px solid transparent; transition: none; font-weight: 700; background: rgb(255, 249, 196); border-radius: 5px; box-shadow: 0px 2px 4px rgba(131, 146, 167, 0.2);"
  >
    <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none; text-align: center; position: relative; overflow: hidden; border-radius: 4px;">
      Bar
    </div>
  </div>
  <div id="26"
       style="position: absolute; left: 472.53515625px; top: 415.0625px; width: 80.296875px; height: 72.39453125px; border: 1px solid transparent; transition: none; font-weight: 700; background: rgb(255, 249, 196); border-radius: 5px; box-shadow: 0px 2px 4px rgba(131, 146, 167, 0.2);"
  >
    <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none; text-align: center; position: relative; overflow: hidden; border-radius: 4px;">
      26
    </div>
  </div>
  <div id="27"
       style="position: absolute; left: 578.46875px; top: 411.203125px; width: 80.296875px; height: 72.39453125px; border: 1px solid transparent; transition: none; font-weight: 700; background: rgb(255, 249, 196); border-radius: 5px; box-shadow: 0px 2px 4px rgba(131, 146, 167, 0.2);"
  >
    <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none; text-align: center; position: relative; overflow: hidden; border-radius: 4px;">
      27
    </div>
  </div>
  <div id="28"
       style="position: absolute; left: 366.01953125px; top: 504.69140625px; width: 80.296875px; height: 72.39453125px; border: 1px solid transparent; transition: none; font-weight: 700; background: rgb(255, 249, 196); border-radius: 5px; box-shadow: 0px 2px 4px rgba(131, 146, 167, 0.2);"
  >
    <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none; text-align: center; position: relative; overflow: hidden; border-radius: 4px;">
      28
    </div>
  </div>
  <div id="29"
       style="position: absolute; left: 473.05859375px; top: 505.61328125px; width: 80.296875px; height: 72.39453125px; border: 1px solid transparent; transition: none; font-weight: 700; background: rgb(255, 249, 196); border-radius: 5px; box-shadow: 0px 2px 4px rgba(131, 146, 167, 0.2);"
  >
    <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none; text-align: center; position: relative; overflow: hidden; border-radius: 4px;">
      29
    </div>
  </div>
  <div id="30"
       style="position: absolute; left: 7.08984375px; top: 330.05859375px; width: 80.296875px; height: 72.39453125px; border: 1px solid transparent; transition: none; font-weight: 700; background: rgb(255, 249, 196); border-radius: 5px; box-shadow: 0px 2px 4px rgba(131, 146, 167, 0.2);"
  >
    <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none; text-align: center; position: relative; overflow: hidden; border-radius: 4px;">
      30
    </div>
  </div>
  <div id="31"
       style="position: absolute; left: 4.92578125px; top: 152.61328125px; width: 80.296875px; height: 72.39453125px; border: 1px solid transparent; transition: none; font-weight: 700; background: rgb(255, 249, 196); border-radius: 5px; box-shadow: 0px 2px 4px rgba(131, 146, 167, 0.2);"
  >
    <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none; text-align: center; position: relative; overflow: hidden; border-radius: 4px;">
      31
    </div>
  </div>
  <div id="32"
       style="position: absolute; left: 7.3046875px; top: 239.09375px; width: 80.296875px; height: 72.39453125px; border: 1px solid transparent; transition: none; font-weight: 700; background: rgb(255, 249, 196); border-radius: 5px; box-shadow: 0px 2px 4px rgba(131, 146, 167, 0.2);"
  >
    <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none; text-align: center; position: relative; overflow: hidden; border-radius: 4px;">
      32
    </div>
  </div>
  <div id="34"
       style="position: absolute; left: 200.8515625px; top: 238.875px; width: 80.296875px; height: 72.39453125px; border: 1px solid transparent; transition: none; font-weight: 700; background: rgb(255, 249, 196); border-radius: 5px; box-shadow: 0px 2px 4px rgba(131, 146, 167, 0.2);"
  >
    <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none; text-align: center; position: relative; overflow: hidden; border-radius: 4px;">
      34
    </div>
  </div>
  <div id="35"
       style="position: absolute; left: 101.74609375px; top: 240.140625px; width: 80.296875px; height: 72.39453125px; border: 1px solid transparent; transition: none; font-weight: 700; background: rgb(255, 249, 196); border-radius: 5px; box-shadow: 0px 2px 4px rgba(131, 146, 167, 0.2);"
  >
    <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none; text-align: center; position: relative; overflow: hidden; border-radius: 4px;">
      35
    </div>
  </div>
  <div style="position: absolute; left: 14px; top: 414.984375px; width: 253.67578125px; height: 17.6796875px; border: 1px solid transparent; transition: none; font-weight: 700; background: rgb(134, 89, 45);">
    <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; pointer-events: none; text-align: center; position: relative; overflow: hidden;">
    </div>
  </div>
</div>
`;
